# ArisAPIV2

./: .gitignore  CMakeLists.txt  README.md  git-sync.sh
include/api/: ApiRouter.h  JsonHelpers.h
include/camera/: CameraDeviceWrapper.h  CameraManager.h
include/grbl/: GrblController.h  SerialPort.h
include/server/: MjpegStreamer.h  RestServer.h  WebSocketHandler.h
src/: main.cpp
src/api/: ApiRouter.cpp  JsonHelpers.cpp
src/camera/: CameraDeviceWrapper.cpp  CameraManager.cpp
src/grbl/: GrblController.cpp  SerialPort.cpp
src/server/: MjpegStreamer.cpp  RestServer.cpp  WebSocketHandler.cpp
